--- a/_config.yml
+++ b/_config.yml
@@ -9,40 +9,38 @@ theme: jekyll-theme-chirpy
 lang: en
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+timezone: Europe/London
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: foimonkey.github.io # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline:  Random musings
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  A place for things with no other logical home
+
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://foimonkey.github.io"
 
 github:
-  username: github_username # change to your GitHub username
+  username: foimonkey # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: foimonkey # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: foimonkey 
+  email:
   links:
-    # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://bsky.app/profile/foimonkey.bsky.social # change to your Twitter homepage
+    - https://github.com/foimonkey  # change to your GitHub homepage
+    - https://huggingface.co/HMC83
 
 # Site Verification Settings
 webmaster_verifications:
@@ -98,7 +96,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/img/avatar.png
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
