--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Europe/London
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: foimonkey.github.io # the main title
+title: foimonkey # the main title
 
 tagline:  Random musings
 
